Normalize line endings

--- a/Eksamen/studyhelp/server/util/emailPages/signup.html
+++ b/Eksamen/studyhelp/server/util/emailPages/signup.html
@@ -23,7 +23,7 @@
         color:#2e1b10;
         text-transform: uppercase;
     ">
-        Imperial Notice of Induction
+        Introduction
     </h1>
 
     <p style="
@@ -33,20 +33,19 @@
         margin-top:0;
         margin-bottom:30px;
     ">
-        Segmented Order - Administratum File: MXLVIII-Σ-455
+        Administrative File
     </p>
 
     <p>
-        Citizen <strong>$$userName$$</strong>,
+        user <strong>$$userName$$</strong>,
     </p>
 
     <p>
-        By writ of Imperial authority, your details have been logged within the scrolls of service.  
-        In this age of unending war, every sanctioned soul strengthens Humanity's shield against the dark.
+   your data has been logged
     </p>
 
     <p style="margin-top: 25px;">
-        Your assigned <strong>Verification Cipher</strong> is recorded as follows:
+        Your assigned <strong>Verification</strong> is recorded as follows:
     </p>
 
     <div style="
@@ -66,8 +65,7 @@
     </div>
 
     <p>
-        Present this cipher to confirm your identity and finalize your induction.  
-        Failure to confirm may result in administrative delay and reassessment by the Adeptus Administratum.
+        Present this Verification to confirm your identity and finalize.  
     </p>
 
     <p style="margin-top: 35px;">
