--- a/Eksamen/studyhelp/server/util/emailPages/signup.html
+++ b/Eksamen/studyhelp/server/util/emailPages/signup.html
@@ -40,9 +40,6 @@
         user <strong>$$userName$$</strong>,
     </p>
 
-    <p>
-   your data has been logged
-    </p>
 
     <p style="margin-top: 25px;">
         Your assigned <strong>Verification</strong> is recorded as follows:
@@ -69,8 +66,7 @@
     </p>
 
     <p style="margin-top: 35px;">
-        Maintain vigilance.<br>
-        Uphold your duty.<br>
-        <strong>For the Emperor.</strong>
+        You have been verified<br>
+      
     </p>
 </div>
